# opengl

./: .gitignore  LICENSE  README.md
basic/: CMakeLists.txt
basic/res/: result.json
basic/res/model/car/: CAR.blend
basic/res/model/chair/: chairss.mtl
basic/res/shader/: fLight.frag  fSimple.frag  fTextured.frag  vLight.vert  vSimple.vert  vTextured.vert
basic/src/: main.cpp  pch.h
basic/src/draw/entity/: Movable.h
basic/src/draw/material/: Material.h
basic/src/draw/mesh/: Mesh.h  Vertex.h
basic/src/draw/render/: CompleteRenderable.h  Renderable.cpp  Renderable.h  SimpleRenderable.h  TextureInterface.h  TexturedRenderable.h
basic/src/draw/renderer/: Renderer.h  RendererManager.h  Renderers.h
basic/src/draw/shader/: HShader.h  LightShader.h  ShaderClass.h  ShaderEnum.h  ShaderInterface.h  ShaderManager.h  ShaderUniform.h  Shaders.h  SimpleShader.h  (+1 more)
basic/src/glComponent/: Camera.cpp  Camera.h  GLSLInterface.h  Screen.cpp  Screen.h  ScreenState.h
basic/src/glcomponent/: Camera.h  ScreenState.h
basic/src/light/: DirectionalLight.h  HLight.h  Light.h  Lights.h  PointLight.h  SpotLight.h
basic/src/mesh/: HMesh.h  Indice.h  Mesh.h  Meshes.h  Texture.cpp  Texture.h  Vertex.h
basic/src/model/: HModel.h  Model.cpp  Model.h
basic/src/object/: Colors.h  HObject.h  Object.h  Objects.h  Pyramid.h  PyramidT.h  PyramidTEmpty.h  PyramidTL.h  Renderable.h  Renderables.h
basic/src/random/: RGEN.h
basic/src/render/: Mesh.cpp  Mesh.h  Renderable.h  Shader.cpp
basic/src/scene/: HScene.h  MainScene.h  Scene.h  Scene01.h  Scene02.h  Scenes.h
basic/src/screenview/: Camera.cpp  Camera.h  Screen.cpp  Screen.h
basic/src/shape/: Pyramid.h  ShapeAttribute.h  ShapeClass.h
basic/src/unit/: Color.h  Vectors.h
basic/src/util/: Array.h  Benchmark.h  DetailedArray.h  MArray.h  Utils.h
spheres/: CMakeLists.txt
spheres/res/: result.json
spheres/res/shader/: fSimple.frag  vInstanced.vert  vInstanced3Transform.vert  vSeparate.vert  vSimple.vert
spheres/src/: main.cpp  pch.h  temp.cpp
spheres/src/glcomponent/: Camera.cpp  Camera.h  Screen.cpp  Screen.h  ScreenState.h
spheres/src/randoms/: RGEN.h  Splitmix64.h  XorshiftP.h
spheres/src/render/: AttributePayload.h  InstanceAttr.h  InstancedMesh.cpp  InstancedMesh.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
spheres/src/shape/: ShapeAttribute.h
spheres/src/universe/: Sector.h  SectorGenerator.cpp  SectorGenerator.h  Star.h  StarPool.cpp  StarPool.h  StarPoolAttribute.h  UniverseController.h  UniverseState.h
spheres/src/util/: Benchmark.h  DetailedArray.h  Utils.h
(+136 files in other folders)
